12 March 2007
+ Rewrote theme change code.
+ Added ability to force theme on layout settings construction.

5 March 2007
+ Changed control panel icon

Version 2.3.0
-------------------------------------------------------------------
22 February 2007
+ Added missing media tags to XML mode.
+ Added XML mode define to config.php file. Puts layout into xhtml+xml mode.
+ Updated files: conf/config.php

21 February 2007
+ Added missing security checks.

19 February 2007
+ Reduced translate calls.

16 February 2007
+ Added translate functions.
+ Wrote update script

14 February 2007
+ Removed references from object constructors.

19 January 2007
+ Added the plug function to allow users to inject content directly
  into a theme.
+ Layout now looks for and includes a theme's theme.php file.
+ Updated files : conf/config.php

Version 2.2.1
-------------------------------------------------------------------
21 November 2006
+ Fixed index names, removed unneccessary index call

Version 2.2.0
-------------------------------------------------------------------
17 November 2006
+ Added missing table to install.sql
+ Added index to metatags table

10 November 2006
+ Added meta tag settings per page.

Version 2.1.6
-------------------------------------------------------------------
2 November 2006
+ Changed import style sheet check to ignore IE 7 and below.
+ Cleaned up config.php.

Version 2.1.5
-------------------------------------------------------------------
1 November 2006
+ Updated files templates/edit_header.tpl, templates/edit_footer.tpl
+ Added ability to control if header and/or footer only appear on
  front page


Version 2.1.4 (pre rc3)
-------------------------------------------------------------------
23 October 2006
+ Added id "layout-naked" to body tag for nakedDisplay function

14 September 2006
+ Fixed bug #1551163 - theme changes were not getting saved.

30 August 2006
+ Added ability to "lock out" some theme variables to prevent boxes from being moved into them